<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activity.SignInActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textColor="@color/black"
        android:layout_marginTop="120dp"
        android:text="@string/welcome_to_use"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/app_name_long"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />


    <EditText
        android:layout_marginTop="80dp"
        android:id="@+id/sign_in_et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/account"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/sign_in_tv_accountDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_description"
        android:visibility="gone" />

    <EditText
        android:id="@+id/sign_in_et_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/passcode"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/sign_in_tv_passcodeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passcode_description"
        android:visibility="gone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/sign_in_btn_sign_in"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in" />
    <TextView
        android:id="@+id/sign_in_tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up" />


</LinearLayout>