<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <include layout="@layout/title_shopping" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:gravity="left">

            <TextView
                android:id="@+id/enroll_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enroll_tv_title"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textSize="20sp" />

        </RelativeLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/sign_up_et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/account"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />


        <TextView
            android:id="@+id/sign_up_tv_account_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_description" />

        <EditText
            android:id="@+id/sign_up_et_passcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/passcode"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/sign_up_tv_passcode_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passcode_description" />

        <EditText
            android:id="@+id/sign_up_et_re_asscode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/rePasscode"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/sign_up_tv_re_passcode_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_passcode_description"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/sign_up_btn_signup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/sign_up_tv_back_to_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back_to_sign_in" />


    </LinearLayout>
</LinearLayout>